--- a/servicos/area_do_cliente/admin.html
+++ b/servicos/area_do_cliente/admin.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestão Administrativa | JL Serviços</title>
@@ -60,6 +60,7 @@
                         <th>Cliente</th>
                         <th>Serviço</th>
                         <th>Status</th>
+                        <th>Data Envio</th>
                         <th>Ações</th>
                     </tr>
                 </thead>
