--- a/servicos/index.html
+++ b/servicos/index.html
@@ -24,19 +24,9 @@
     <nav class="main-nav">
       <ul class="menu">
         <li class="menu-item"><a href="../index.html">Início</a></li>
-        <li class="menu-item dropdown">
-          <button class="dropdown-toggle" type="button">Serviços</button>
-          <ul class="dropdown-menu">
-            <li><a href="./mei/index.html">MEI</a></li>
-            <li><a href="./pessoa-fisica/index.html">Pessoa Física</a></li>
-            <li><a href="./contabeis/index.html">Serviços Contábeis</a></li>
-            <li><a href="./certidoes-regularizacoes/index.html">Certidões</a></li>
-            <li><a href="./certificado-digital/index.html">Certificado Digital</a></li>
-            <li><a href="./outros/index.html">Outros</a></li>
-          </ul>
-        </li>
         <li class="menu-item"><a href="../blog/index.html">Blog</a></li>
         <li class="menu-item"><a href="../sobre/index.html">Sobre</a></li>
+        <li class="menu-item"><a href="../sobre/index.html">LGPD</a></li>
       </ul>
     </nav>
   </div>
