--- a/lgpd/index.html
+++ b/lgpd/index.html
@@ -64,7 +64,7 @@
         <li class="menu-item"><a href="../index.html">Início</a></li>
         <li class="menu-item"><a href="../servico/index.html">Serviços</a></li>
         <li class="menu-item"><a href="../sobre/index.html">Sobre</a></li>
-        <li class="menu-item"><a href="index.html" style="color: #bd9617;">LGPD</a></li>
+        <li class="menu-item"><a href="../lgpd/index.html" style="color: #bd9617;">LGPD</a></li>
       </ul>
     </nav>
   </div>
