--- a/lgpd/index.html
+++ b/lgpd/index.html
@@ -62,7 +62,8 @@
     <nav class="main-nav">
       <ul class="menu">
         <li class="menu-item"><a href="../index.html">Início</a></li>
-        <li class="menu-item"><a href="../servico/index.html">Serviços</a></li>
+        <li class="menu-item"><a href="../servicos/index.html">Serviços</a></li>
+        <li class="menu-item"><a href="../blog/index.html">Blog</a></li>
         <li class="menu-item"><a href="../sobre/index.html">Sobre</a></li>
       </ul>
     </nav>
